Implemented method to handle the case that user uses the output of a job as the input of another

--- a/WebContent/pages/private/workflows/workflow_composer.xhtml
+++ b/WebContent/pages/private/workflows/workflow_composer.xhtml
@@ -205,6 +205,7 @@
                                  update=":form:growl" style="margin: 5px"
                                  onclick="PF('file_dlg').hide()"/>
                 <p:commandButton value="Pular" update=":form:growl" style="margin: 5px"
+                                 action="#{workflowComposerBean.setJobFieldsWithOutput()}"
                                  onclick="PF('file_dlg').hide()"/>
             </p:panel>
         </h:form>
