Trying to put select instances

--- a/WebContent/pages/private/workflows/workflow_composer.xhtml
+++ b/WebContent/pages/private/workflows/workflow_composer.xhtml
@@ -5,7 +5,14 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:pe="http://primefaces.org/ui/extensions">
-
+    
+    <script type="text/javascript">
+        function editLastDatatableRow(){
+            jQuery('.ui-datatable-data tr').last().find('span.ui-icon-pencil').each(function(){
+            jQuery(this).click()
+            });
+        }
+    </script>
     <ui:decorate template="/resources/templates/template.xhtml">	
 
         <!-- Center Content -->
@@ -76,24 +83,43 @@
                                         </h:panelGroup>
 
                                     </h:panelGrid>
-                                    <p:outputPanel id="instancies_types" style="margin-bottom:10px">
+                                    
+                                    <h:panelGrid columns="3" id="instances">
+                                        <p:column headerText="Instância" width="25em" style="text-align: center">
+                                            <p:selectOneMenu id="instance" value="#{instance.description}"  style="width:100%">
+                                                <f:selectItems value="#{slaComposerBean.instancies}" var="man" itemLabel="#{man.description}" itemValue="#{man.description}" />
+                                            </p:selectOneMenu>
+                                        </p:column>
+                                        <p:column headerText="Quantidade" width="25em" style="text-align: center">
+                                                <h:outputText value="#{man.quantity}" />
+                                                <pe:inputNumber value="#{instance.quantity}" style="width:100%" label="Quantidade"  minValue="0" maxValue="100" maxlength="3" />
+                                        </p:column>    
+                                        <p:column>
+                                                <f:facet name="left">
+                                                    <p:commandButton action="#{slaComposerBean.addSelectedInstance(man)}"
+                                                                     value="+" icon="ui-icon-check" 
+                                                                     update=":form:selected_instances, :form:growl"
+                                                                     iconPos="left" />
+                                                </f:facet>
+                                        </p:column>
+                                    </h:panelGrid>
+                                    <p:outputPanel id="selected_instances" style="margin-bottom:10px">
                                         <p:outputLabel value="Tipos de instâncias:" /> <br />
-                                        <p:dataTable value="#{slaComposerBean.instancies}" var="instance" style="width: 60em"
-                                                     paginator="true" rows="5" emptyMessage="Quantidade de instância "
-                                                     selection="#{slaComposerBean.selectedInstancies}" rowKey="#{instance.type}" editable="true" editMode="cell">
+                                        <p:dataTable value="#{slaComposerBean.selectedInstancies}" var="instance" style="width: 60em"
+                                                     paginator="true" rows="5" emptyMessage="Nenhuma instância adicionada"
+                                                     id="instancesList">
 
                                             <p:column headerText="Tipo" width="25em" style="text-align: center">
-                                                <p:outputLabel value="#{instance.type}"/>
+                                                <p:outputLabel value="#{instance.description}"/>
                                             </p:column>
 
                                             <p:column headerText="Quantidade" width="25em" style="text-align: center">
-                                                <p:cellEditor>
                                                     <f:facet name="output"><h:outputLabel value="#{instance.quantity}"/></f:facet>
-                                                    <f:facet name="input"><pe:inputNumber value="#{instance.quantity}" style="width:100%" label="Quantidade"  minValue="0" maxValue="100" maxlength="3" /></f:facet>   
-                                                </p:cellEditor>
                                             </p:column>
 
-                                            <p:column headerText="Escolha" style="text-align: center" selectionMode="multiple" />
+                                            <p:column>
+                                                <p:commandButton icon="ui-icon-circle-close" action="#{slaComposerBean.removeElement(e)}" update=":form:selected_instances"/>
+                                            </p:column>
                                         </p:dataTable>
                                     </p:outputPanel>
                                 </p:panel> 
@@ -108,10 +134,6 @@
                         </p:tabView>
                         <!--</p:panel>-->
                     </p:tab>
-
-
-
-
 
 
 
